# ML

./: reorganize.sh
backend/: .env  docker-compose.yml  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  analysis.py  batch.py  listing.py  product.py  session.py
backend/app/routers/: batches_router.py  products_router.py  sessions.py
backend/app/services/: margin_engine.py  ml_table_scraper.py  notification_service.py  pdf_parser.py  scraper.py  term_validator.py  visit_estimator.py
backend/app/workers/: celery_app.py  pdf_worker.py  scraper_worker.py  table_sync_worker.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/components/: BatchStatusBar.tsx  ListingCard.tsx  MarginSimulator.tsx  Shell.tsx
frontend/src/hooks/: index.ts
frontend/src/pages/: BatchReview.tsx  History.tsx  Session.tsx  Upload.tsx
frontend/src/types/: index.ts
