[project]
name = "ml-market-research"
version = "1.0.0"
requires-python = ">=3.12"

dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # Banco
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Celery
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",

    # Config
    "pydantic-settings>=2.6.0",

    # Anthropic (Claude Vision)
    "anthropic>=0.40.0",

    # Scraping
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "playwright>=1.49.0",

    # Email
    "resend>=2.4.0",
]
